force-app/main/default/objects/Competitor_Visit__c/Competitor_Visit__c.object-meta.xml
<CustomObject>
    <label>Competitor Visit</label>
    <nameField>
        <displayFormat>CV-{0000000}</displayFormat>
        <label>Visit Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competitor Visits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>