force-app/main/default/objects/Competitor_Visit__c/fields/Announced_New_Arrivals__c.field-meta.xml
<CustomField>
    <fullName>Announced_New_Arrivals__c</fullName>
    <label>Announced New Arrivals</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>