force-app/main/default/objects/Competitor_Visit__c/fields/Brands_we_should_consider__c.field-meta.xml
<CustomField>
    <fullName>Brands_we_should_consider__c</fullName>
    <label>Brands we should consider</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>