force-app/main/default/objects/Competitor_Visit__c/fields/BVSC_Employees_Name__c.field-meta.xml
<CustomField>
    <fullName>BVSC_Employees_Name__c</fullName>
    <label>BVSC Employees Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>