force-app/main/default/objects/Competitor_Visit__c/fields/Change_Since_Last_Visit__c.field-meta.xml
<CustomField>
    <fullName>Change_Since_Last_Visit__c</fullName>
    <label>Change Since Last Visit</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>