force-app/main/default/objects/Competitor_Visit__c/fields/Competitor_Site__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Site__c</fullName>
    <label>Competitor Site</label>
    <referenceTo>Competitor_site__c</referenceTo>
    <relationshipLabel>Competitor Visits / Intel</relationshipLabel>
    <relationshipName>Competitor_Visits</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>