force-app/main/default/objects/Competitor_Visit__c/fields/Customer_profile_and_bag_count__c.field-meta.xml
<CustomField>
    <fullName>Customer_profile_and_bag_count__c</fullName>
    <label>Customer profile and bag count</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>