force-app/main/default/objects/Competitor_Visit__c/fields/Customer_Service__c.field-meta.xml
<CustomField>
    <fullName>Customer_Service__c</fullName>
    <label>Customer Service</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Efficient</fullName>
            </value>
            <value>
                <fullName>Spoke Various Languages</fullName>
            </value>
            <value>
                <fullName>Understood My Concerns</fullName>
            </value>
            <value>
                <fullName>Resolved My Concerns</fullName>
            </value>
            <value>
                <fullName>Accessible</fullName>
            </value>
            <value>
                <fullName>Welcoming</fullName>
            </value>
            <value>
                <fullName>Helpful</fullName>
            </value>
            <value>
                <fullName>Encouraged To Purchase</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>