force-app/main/default/objects/Competitor_Visit__c/fields/Date_of_Visit__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Visit__c</fullName>
    <label>Date of Visit/Source</label>
    <type>Date</type>
</CustomField>