force-app/main/default/objects/Competitor_Visit__c/fields/Extra_Services__c.field-meta.xml
<CustomField>
    <fullName>Extra_Services__c</fullName>
    <description>..</description>
    <label>Extra Services</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tailoring</fullName>
            </value>
            <value>
                <fullName>personalization</fullName>
            </value>
            <value>
                <fullName>Information Hub (TIC)</fullName>
            </value>
            <value>
                <fullName>Hands-free Shopping</fullName>
            </value>
            <value>
                <fullName>Valet Parking</fullName>
            </value>
            <value>
                <fullName>Charging Stations</fullName>
            </value>
            <value>
                <fullName>Tax Free</fullName>
            </value>
            <value>
                <fullName>Loyalty Program</fullName>
            </value>
            <value>
                <fullName>Shipping</fullName>
            </value>
            <value>
                <fullName>bag Storage Area</fullName>
            </value>
            <value>
                <fullName>Gift Wrapping</fullName>
            </value>
            <value>
                <fullName>Beauty Services</fullName>
            </value>
            <value>
                <fullName>Dog Allowance</fullName>
            </value>
            <value>
                <fullName>Personal Shopping</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>