force-app/main/default/objects/Competitor_Visit__c/fields/Food_Beverage_Options__c.field-meta.xml
<CustomField>
    <fullName>Food_Beverage_Options__c</fullName>
    <label>Food &amp; Beverage Options</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>1 - 5</fullName>
            </value>
            <value>
                <fullName>6 - 10</fullName>
            </value>
            <value>
                <fullName>10 +</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>