force-app/main/default/objects/Competitor_Visit__c/fields/Food_Beverage_Quality__c.field-meta.xml
<CustomField>
    <fullName>Food_Beverage_Quality__c</fullName>
    <label>Food &amp; Beverage Quality</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>