force-app/main/default/objects/Competitor_Visit__c/fields/General_Presentation__c.field-meta.xml
<CustomField>
    <fullName>General_Presentation__c</fullName>
    <label>General Presentation</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Clean Floors</fullName>
            </value>
            <value>
                <fullName>Free Parking</fullName>
            </value>
            <value>
                <fullName>Clean Windows</fullName>
            </value>
            <value>
                <fullName>Good Lighting</fullName>
            </value>
            <value>
                <fullName>Music</fullName>
            </value>
            <value>
                <fullName>Landscape Outside</fullName>
            </value>
            <value>
                <fullName>Parking Availability</fullName>
            </value>
            <value>
                <fullName>Brochures</fullName>
            </value>
            <value>
                <fullName>Good Acoustic</fullName>
            </value>
            <value>
                <fullName>Promotional Marketing</fullName>
            </value>
            <value>
                <fullName>Navigational Signage</fullName>
            </value>
            <value>
                <fullName>Directory/Map</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>