force-app/main/default/objects/Competitor_Visit__c/fields/In_Store_Presentation__c.field-meta.xml
<CustomField>
    <fullName>In_Store_Presentation__c</fullName>
    <inlineHelpText>window display, VM guidelines, quality of shopfit etc</inlineHelpText>
    <label>In Store Presentation</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>