force-app/main/default/objects/Competitor_Visit__c/fields/Instore_Services__c.field-meta.xml
<CustomField>
    <fullName>Instore_Services__c</fullName>
    <label>Instore Services</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>