force-app/main/default/objects/Competitor_Visit__c/fields/Key_Leasing_Points__c.field-meta.xml
<CustomField>
    <fullName>Key_Leasing_Points__c</fullName>
    <label>Key Leasing Points</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>