force-app/main/default/objects/Competitor_Visit__c/fields/Number_of_Empty_Units__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Empty_Units__c</fullName>
    <label>Number of Empty Units</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>