force-app/main/default/objects/Competitor_Visit__c/fields/Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Opportunities__c</fullName>
    <inlineHelpText>what we want to bring to our Village</inlineHelpText>
    <label>Opportunities</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>