force-app/main/default/objects/Competitor_Visit__c/fields/Other_Matters__c.field-meta.xml
<CustomField>
    <fullName>Other_Matters__c</fullName>
    <inlineHelpText>mission statements, VIP brochures, marketing material, etc.</inlineHelpText>
    <label>Other Matters</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>