force-app/main/default/objects/Competitor_Visit__c/fields/Overall_Experience__c.field-meta.xml
<CustomField>
    <fullName>Overall_Experience__c</fullName>
    <label>Overall Experience</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Poor</fullName>
            </value>
            <value>
                <fullName>Satisfactory</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Extraordinary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>