force-app/main/default/objects/Competitor_Visit__c/fields/Retail_Discount__c.field-meta.xml
<CustomField>
    <fullName>Retail_Discount__c</fullName>
    <label>Retail Discount</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>&lt;5%</fullName>
            </value>
            <value>
                <fullName>5 - 10%</fullName>
            </value>
            <value>
                <fullName>10 - 20%</fullName>
            </value>
            <value>
                <fullName>20 -30%</fullName>
            </value>
            <value>
                <fullName>30 - 40%</fullName>
            </value>
            <value>
                <fullName>40 - 50%</fullName>
            </value>
            <value>
                <fullName>50 - 75%</fullName>
            </value>
            <value>
                <fullName>&gt;75%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>