force-app/main/default/objects/Competitor_Visit__c/fields/Retail_Offer__c.field-meta.xml
<CustomField>
    <fullName>Retail_Offer__c</fullName>
    <inlineHelpText>product mix,comparable discounts</inlineHelpText>
    <label>Retail Offer</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>