force-app/main/default/objects/Competitor_Visit__c/fields/Risks__c.field-meta.xml
<CustomField>
    <fullName>Risks__c</fullName>
    <inlineHelpText>new phases, customer changing from BV to another mall</inlineHelpText>
    <label>Risks</label>
    <type>TextArea</type>
</CustomField>