force-app/main/default/objects/Competitor_Visit__c/fields/Share_Site_Visit_Info__c.field-meta.xml
<CustomField>
    <fullName>Share_Site_Visit_Info__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When Checked this Site Visit Report will be shared across the business.</inlineHelpText>
    <label>Share Site Visit Info</label>
    <type>Checkbox</type>
</CustomField>