force-app/main/default/objects/Competitor_Visit__c/recordTypes/Intel.recordType-meta.xml
<RecordType>
    <fullName>Intel</fullName>
    <active>true</active>
    <description>Competitive intelligence gathered from contacts etc.</description>
    <label>Intel</label>
</RecordType>