force-app/main/default/objects/Competitor_Visit__c/recordTypes/Site_Visit.recordType-meta.xml
<RecordType>
    <fullName>Site_Visit</fullName>
    <active>true</active>
    <description>Physical visits to competitor sites.</description>
    <label>Site Visit</label>
</RecordType>